add a non-simulated graph war detector

--- a/graph theory-isolated portion.ipynb
+++ b/graph theory-isolated portion.ipynb
@@ -798,6 +798,44 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "d2b09de5-860e-4ed2-a69b-7866892ed5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raw_check_from_to(graph,start_time,end_time,time_steps=7,pred_params=None,alliances=None):\n",
+    "    \"\"\"\n",
+    "    Inputs: graph, start_time (days AD), end_time (days AD), time_steps (in days), prediction parameters\n",
+    "    Outputs: predicted war date, and either graph animation in notebook, or saved mp4, \n",
+    "    with prediction labels\n",
+    "    \n",
+    "    this function is our simulation harness, we:\n",
+    "    first:\n",
+    "    check if we are in a stable state, and stop if we are\n",
+    "    check for war inevitability in the above step\n",
+    "    output results if we are stable, which should occur anyways\n",
+    "    then:\n",
+    "    we update our graph to the next time, and check again until\n",
+    "    we reach our end time of the simulation\n",
+    "    \"\"\"\n",
+    "    graph=graph_constructor(alliances,start_time)\n",
+    "    G=graph\n",
+    "    stable=False\n",
+    "    wartimes=[]\n",
+    "    times=np.arange(start=start_time,stop=end_time,step=time_steps)\n",
+    "    for time in times:\n",
+    "        number_connected_components,number_of_complete_components,stable,war,two_distinct_sg = component_analysis(G)# check if war is inevitable yet\n",
+    "        if stable:\n",
+    "            if two_distinct_sg:\n",
+    "                #we predict war\n",
+    "                wartimes.append(time)\n",
+    "        G=graph_constructor(alliances,time)\n",
+    "    return wartimes\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "5d9ef788-d9b8-4118-82bb-0324e0aeb4a1",
    "metadata": {},
    "outputs": [],
@@ -849,8 +887,8 @@
     "        else:\n",
     "            return 0\n",
     "    else:\n",
-    "        positive_accurac= correct_num_predictions/total_pred\n",
-    "        return positive_accurac"
+    "        positive_accuracy= correct_num_predictions/total_pred\n",
+    "        return positive_accuracy"
    ]
   },
   {
@@ -867,8 +905,10 @@
     "real_wars=isw_data\n",
     "G= graph_constructor(df,start_time)\n",
     "#draw_graph(G,alliances)\n",
-    "pred_war_times, graphs_over_time = war_predictions(base_alliance_dataframe=alliances,starting_graph=G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None)\n",
-    "positive_rate=(true_pred_accuracy(pred_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12,))\n",
+    "pred_raw_war_times= raw_check_from_to(G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None,alliances=alliances)\n",
+    "#pred_war_times_s, graphs_over_time = war_predictions(base_alliance_dataframe=alliances,starting_graph=G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None)\n",
+    "#positive_rate_s=(true_pred_accuracy(pred_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12,))\n",
+    "positive_rate_r=true_pred_accuracy(pred_raw_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12)\n",
     "print(component_analysis(graphs_over_time[-1][-1]))\n",
     "#draw_graph(graph_constructor(alliances,pred_war_times[0][0]),alliances)\n",
     "print(positive_rate)\n",
