prepare run non-graph simulated one

--- a/graph theory-isolated portion.ipynb
+++ b/graph theory-isolated portion.ipynb
@@ -398,14 +398,7 @@
    "source": [
     "#animation for time codes\n",
     "start=665325.0\n",
-    "stop=698067.75\n",
-    "times_step=np.arange(start=start,stop=stop,step=100)\n",
-    "times_lin=np.linspace(start=start,stop=stop,num=60)\n",
-    "#for time in times_lin:\n",
-    "#    G= graph_constructor(df,time)\n",
-    "#    G,names=append_state_names(G,df)\n",
-    "#    nx.draw_kamada_kawai(G,labels=names)\n",
-    "#    plt.show()"
+    "stop=698067.75"
    ]
   },
   {
@@ -533,12 +526,15 @@
     "            #print(f'war is inevitable, we have a stable graph, with 2 complete components of sizes {complete_com_sizes[0]}, and {complete_com_sizes[1]} ')\n",
     "        else:\n",
     "            stable=True\n",
-    "            war=0.3#? clearly war is likely, but it probably isn't inevitable\n",
+    "            war=True\n",
+    "            war=1-(1/(number_connected_components))#? clearly war is likely, but it probably isn't inevitable\n",
     "            #print(f'graph is unstable, with  {number_connected_components} seperate alliance gropus, war is probably inevitable')\n",
     "    else:\n",
     "        stable=False\n",
+    "        if number_connected_components>1:\n",
+    "            war=1.0\n",
+    "            stable=False\n",
     "        #print(f'graph is unstable, with {number_connected_components} groups, allilances are likely to shift before war can break out')\n",
-    "        war=0\n",
     "    return number_connected_components,number_of_complete_components,stable,war,two_distinct_sg"
    ]
   },
@@ -802,7 +798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def raw_check_from_to(graph,start_time,end_time,time_steps=7,pred_params=None,alliances=None):\n",
+    "def raw_check_from_to(graph,start_time,end_time,time_steps=30,pred_params=None,alliances=None):\n",
     "    \"\"\"\n",
     "    Inputs: graph, start_time (days AD), end_time (days AD), time_steps (in days), prediction parameters\n",
     "    Outputs: predicted war date, and either graph animation in notebook, or saved mp4, \n",
@@ -821,15 +817,15 @@
     "    G=graph\n",
     "    stable=False\n",
     "    wartimes=[]\n",
+    "    graphs=[]\n",
     "    times=np.arange(start=start_time,stop=end_time,step=time_steps)\n",
     "    for time in times:\n",
     "        number_connected_components,number_of_complete_components,stable,war,two_distinct_sg = component_analysis(G)# check if war is inevitable yet\n",
-    "        if stable:\n",
-    "            if two_distinct_sg:\n",
-    "                #we predict war\n",
-    "                wartimes.append(time)\n",
+    "        if war>0.5:\n",
+    "            #we predict war\n",
+    "            wartimes.append((time,G.nodes()))\n",
     "        G=graph_constructor(alliances,time)\n",
-    "    return wartimes\n",
+    "    return wartimes,graphs\n",
     "\n"
    ]
   },
@@ -893,10 +889,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "87590423-fd04-48d1-89ad-182007bcf782",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate tuple (not \"int\") to tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m pred_raw_war_times\u001b[38;5;241m=\u001b[39m raw_check_from_to(G,start_time\u001b[38;5;241m=\u001b[39mstart_time,end_time\u001b[38;5;241m=\u001b[39mend_time,time_steps\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m,pred_params\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,alliances\u001b[38;5;241m=\u001b[39malliances)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#pred_war_times_s, graphs_over_time = war_predictions(base_alliance_dataframe=alliances,starting_graph=G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#positive_rate_s=(true_pred_accuracy(pred_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12,))\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m positive_rate_r\u001b[38;5;241m=\u001b[39m\u001b[43mtrue_pred_accuracy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_raw_war_times\u001b[49m\u001b[43m,\u001b[49m\u001b[43mreal_wars\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstart_time\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstart_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43mend_time\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mend_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43mday_window\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(component_analysis(graphs_over_time[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]))\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#draw_graph(graph_constructor(alliances,pred_war_times[0][0]),alliances)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[19], line 36\u001b[0m, in \u001b[0;36mtrue_pred_accuracy\u001b[0;34m(war_pred, true_war_df, start_time, end_time, day_window)\u001b[0m\n\u001b[1;32m     34\u001b[0m war_earliest_date\u001b[38;5;241m=\u001b[39mpredicted_war[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     35\u001b[0m countries\u001b[38;5;241m=\u001b[39mpredicted_war[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m---> 36\u001b[0m matching_war_found\u001b[38;5;241m=\u001b[39m\u001b[43mfind_matching_war\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcountries\u001b[49m\u001b[43m,\u001b[49m\u001b[43mwar_earliest_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtrue_war_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43mwindow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mday_window\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m matching_war_found:\n\u001b[1;32m     38\u001b[0m     correct_num_predictions\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[0;32mIn[19], line 20\u001b[0m, in \u001b[0;36mfind_matching_war\u001b[0;34m(countries, date, war_data_frame, window)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind_matching_war\u001b[39m(countries, date, war_data_frame,window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m6\u001b[39m):\n\u001b[1;32m     14\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124;03m    Input: country code id's as a iterable list of nodes; countries\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m    date: earliest datecode of war,\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;124;03m    window: size in day's of window to search through\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m    war_datwar_data_frame: dataframe with start and stop datecodes for actual war's, and\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m     search_data_frame\u001b[38;5;241m=\u001b[39mgen_war_dataset_for_timecodes(war_data_frame,start_dc\u001b[38;5;241m=\u001b[39mdate, stop_dc\u001b[38;5;241m=\u001b[39m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mwindow\u001b[49m)\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mlen\u001b[39m(search_data_frame)): \u001b[38;5;66;03m#loop over all the real war's that occured for our search time period\u001b[39;00m\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m country \u001b[38;5;129;01min\u001b[39;00m countries: \u001b[38;5;66;03m#loop over our predicted countries at war\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate tuple (not \"int\") to tuple"
+     ]
+    }
+   ],
    "source": [
     "#procedural run our model time:\n",
     "start_time=665325.0\n",
@@ -905,7 +915,7 @@
     "real_wars=isw_data\n",
     "G= graph_constructor(df,start_time)\n",
     "#draw_graph(G,alliances)\n",
-    "pred_raw_war_times= raw_check_from_to(G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None,alliances=alliances)\n",
+    "pred_raw_war_times= raw_check_from_to(G,start_time=start_time,end_time=end_time,time_steps=30,pred_params=None,alliances=alliances)\n",
     "#pred_war_times_s, graphs_over_time = war_predictions(base_alliance_dataframe=alliances,starting_graph=G,start_time=start_time,end_time=end_time,time_steps=7,pred_params=None)\n",
     "#positive_rate_s=(true_pred_accuracy(pred_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12,))\n",
     "positive_rate_r=true_pred_accuracy(pred_raw_war_times,real_wars,start_time=start_time,end_time=end_time,day_window=30*12)\n",
@@ -956,6 +966,27 @@
    "source": [
     "G=Simulate_at_graph(G,0,None)\n",
     "nx.draw_kamada_kawai(Simulate_at_graph(G,0,None), with_labels=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d466ae84-52c8-4958-8525-f09667b45255",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#animation for time codes\n",
+    "start=695325.0\n",
+    "stop=718067.75\n",
+    "#times_step=np.arange(start=start,stop=stop,step=100)\n",
+    "times_lin=np.linspace(start=start,stop=stop,num=60)\n",
+    "for time in times_lin:\n",
+    "    G= graph_constructor(df,time)\n",
+    "    G,names=append_state_names(G,df)\n",
+    "    nx.draw_kamada_kawai(G,labels=names)\n",
+    "    plt.show()\n",
+    "    print(time/365.25)\n",
+    "    clear_output(wait=True)"
    ]
   }
  ],
