--- a/FinalReport.ipynb
+++ b/FinalReport.ipynb
@@ -77,7 +77,7 @@
     "import plotly.io as pio\n",
     "\n",
     "# Miscellaneous\n",
-    "import warnings # To hide any and all warnings and ensure a cleaner notebook\n",
+    "import warnings # To hide any and all warnings and ensure for a cleaner notebook\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
