made updates to readme

--- a/archive/svm.ipynb
+++ b/archive/svm.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4bb3475c-f9d3-4ee8-bb96-d98493caa570",
    "metadata": {},
    "outputs": [],
@@ -66,20 +66,23 @@
     "sns.set_context('paper')\n",
     "\n",
     "# DateTime Setup\n",
-    "from datetime import timedelta, datetime, date\n",
+    "import time\n",
+    "\n",
+    "# NetworkX Setup\n",
+    "import networkx as nx\n",
+    "\n",
+    "# Machine Learning Setup\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Miscellaneous\n",
     "import warnings # To hide any and all warnings and ensure for a cleaner notebook\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "from IPython.display import display, clear_output\n",
+    "rng = np.random.default_rng()\n",
+    "pd.options.mode.copy_on_write = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fef4666c-6295-4b2d-9539-ce4010677071",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
