--- a/graph theory-isolated portion.ipynb
+++ b/graph theory-isolated portion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9910da1e-b39d-474d-acde-85b58ed4308b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "117093d1-fe05-40ee-aeae-87f176181cee",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c599fc04-6c18-4f8e-8594-aaaeea746c04",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7380d4fa-d74d-4455-ad7e-b0453960b922",
    "metadata": {},
    "outputs": [
@@ -56,13 +56,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#remove shit we don't care about\n",
+    "#remove things we don't care about\n",
     "dfpp=df_raw.drop(labels=list(['version4id','left_censor','right_censor','nonaggression','version']),axis=1)\n",
     "#filter out aliances where we don't know the end or start day's\n",
     "#solution to use notna from stack overflow\n",
