--- a/graph theory-isolated portion.ipynb
+++ b/graph theory-isolated portion.ipynb
@@ -537,13 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to be done by other group members:\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "finish these cells\n",
-    "\n",
-    "\"\"\"\n",
+    "# Saif did this part.\n",
     "\n",
     "#\n",
     "def train_models(data):\n",
