--- a/code.ipynb
+++ b/code.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "117093d1-fe05-40ee-aeae-87f176181cee",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "c599fc04-6c18-4f8e-8594-aaaeea746c04",
    "metadata": {},
    "outputs": [],
@@ -69,18 +69,20 @@
     "# remove things we don't care about\n",
     "dfpp=df_raw.drop(labels=list(['version4id','left_censor','right_censor','nonaggression','version']),axis=1)\n",
     "\n",
-    "#filter out alliances where we don't know the end or start day's\n",
-    "#solution to use notna from stack overflow\n",
+    "# filter out alliances where we don't know the end or start days: solution - use notna. Accessed from stack overflow\n",
+    "\n",
     "df_clean1 = dfpp[dfpp['dyad_st_day'].notna()]\n",
     "df=df_clean1[df_clean1['dyad_end_day'].notna()]\n",
-    "#convert to a date code\n",
+    "\n",
+    "# convert to a date code\n",
     "def datecode(year,month,day):\n",
     "    datecode=year*365.25+month*30+day\n",
     "    return datecode\n",
     "\n",
     "starts=[]\n",
     "ends=[]\n",
-    "#nessacary for iteration below\n",
+    "\n",
+    "# necessary for iteration below\n",
     "df.reset_index(drop=True,inplace=True)\n",
     "for i in range(0,len(df)):\n",
     "    #filter out non-defense non-entente alliances\n",
