--- a/code.ipynb
+++ b/code.ipynb
@@ -90,7 +90,8 @@
     "        #print('')\n",
     "        df.drop(i,axis=0,inplace=True)\n",
     "df.reset_index(drop=True,inplace=True)\n",
-    "#convert to datecodes\n",
+    "\n",
+    "# convert to datecodes\n",
     "for i in range(0,len(df)):\n",
     "    dcs=datecode(df['dyad_st_year'][i],df['dyad_st_month'][i],df['dyad_st_day'][i])\n",
     "    starts.append(dcs)\n",
@@ -98,9 +99,11 @@
     "    ends.append(dce)\n",
     "df['datecode_st']=starts\n",
     "df['datecode_end']=ends\n",
-    "#now that we have datecodes, drop the year,month,day labels\n",
+    "\n",
+    "#now that we have datecodes, drop the year-month-day labels\n",
     "df.drop(axis=1,labels=['dyad_end_year','dyad_end_month','dyad_end_day','dyad_st_year','dyad_st_month','dyad_st_day'], inplace=True)\n",
-    "#we now have cleanish data\n",
+    "\n",
+    "# we now have partially cleaned data\n",
     "alliances=df\n",
     "alliances.columns"
    ]
