--- a/code.ipynb
+++ b/code.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "7380d4fa-d74d-4455-ad7e-b0453960b922",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
     "df['datecode_st']=starts\n",
     "df['datecode_end']=ends\n",
     "\n",
-    "#now that we have datecodes, drop the year-month-day labels\n",
+    "# now that we have datecodes, drop the year-month-day labels\n",
     "df.drop(axis=1,labels=['dyad_end_year','dyad_end_month','dyad_end_day','dyad_st_year','dyad_st_month','dyad_st_day'], inplace=True)\n",
     "\n",
     "# we now have partially cleaned data\n",
@@ -110,42 +110,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "b4ae3b74-1ca0-4ecf-be02-77e581a86664",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#remove shit we don't care about\n",
+    "# remove things we don't care about\n",
     "war_droped=Inter_StateWarData.drop(labels=list(['Version','StartMonth2', 'StartDay2','StartYear2']),axis=1)\n",
-    "#filter out aliances where we don't know the end or start day's\n",
-    "#solution to use notna from stack overflow\n",
+    "\n",
+    "# filter out alliances where we don't know the end or start days: solution - use notna. Accessed from stack overflow\n",
+    "\n",
     "isw_data_w_s_dates = war_droped[war_droped['StartDay1'].notna()]\n",
     "isw_data_w_e_dates = isw_data_w_s_dates[isw_data_w_s_dates['EndDay2'].notna()]\n",
     "isw_partial  = isw_data_w_e_dates\n",
     "starts=[]\n",
     "ends=[]\n",
-    "#nessacary for iteration below\n",
+    "\n",
+    "# nessacary for iteration below\n",
     "isw_partial.reset_index(drop=True,inplace=True)\n",
+    "\n",
     "#convert to datecodes\n",
     "for i in range(0,len(isw_partial)):\n",
     "    dcs=datecode(isw_partial['StartYear1'][i],isw_partial['StartMonth1'][i],isw_partial['StartDay1'][i])\n",
     "    starts.append(dcs)\n",
-    "    if isw_partial['EndDay2'][i]<0:  #means we don't have a battle inturruption\n",
+    "    if isw_partial['EndDay2'][i]<0:  # means we don't have a battle interruption\n",
     "        dce=datecode(isw_partial['EndYear1'][i],isw_partial['EndMonth1'][i],isw_partial['EndDay1'][i])\n",
     "    else:\n",
     "        dce=datecode(isw_partial['EndYear2'][i],isw_partial['EndMonth2'][i],isw_partial['EndDay2'][i])\n",
     "    ends.append(dce)\n",
     "isw_partial['datecode_st']=starts\n",
     "isw_partial['datecode_end']=ends\n",
-    "#now that we have datecodes, drop the year,month,day labels\n",
+    "\n",
+    "# now that we have datecodes, drop the year-month-day labels\n",
     "isw_partial.drop(axis=1,labels=['StartMonth1', 'StartDay1', 'StartYear1','EndMonth2','EndDay2', 'EndYear2','EndMonth1', 'EndDay1','EndYear1'], inplace=True)\n",
-    "#we now have cleanish data\n",
+    "\n",
+    "# we now have cleanish data\n",
     "isw_data=isw_partial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "bcd530ec-3f00-4857-bee4-ff0edb1e78a4",
    "metadata": {},
    "outputs": [
@@ -262,7 +267,7 @@
        "4      0.0    669460.00     669674.25  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,12 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create a graph of our allliances, for a given point in time by first filtering for those aliances wich ended before our start time,\n",
+    "# create a graph of our alliances, for a given point in time by first filtering for those alliances which ended before our start time,\n",
     "# and then those with started after our end time\n",
     "# we consider defense pacts and entente's as alliances, and ignore all other forms alliance forms, presuming enemies.\n",
     "\n",
-    "#now we should have a graph of alliances for some date code \n",
-    "#graph this to check"
+    "# now we should have a graph of alliances for some date code \n",
+    "# graph this to check"
    ]
   },
   {
@@ -293,31 +298,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#now for a given datecode, we construct a graph with all alliances active at that time:\n",
-    "#first we filter for only alliances that are within our datecode\n",
+    "# now for a given datecode, we construct a graph with all alliances active at that time:\n",
+    "# first we filter for only alliances that are within our datecode\n",
     "def date_filter(dataframe,datecode):\n",
     "    df=dataframe.reset_index(drop=True,inplace=False)\n",
     "    for i in range(0,len(df)):\n",
-    "    #filter out alliances that aren't active, ie not dc_st < datecode< dcend\n",
+    "    # filter out alliances that aren't active, ie not dc_st < datecode< dcend\n",
     "        if not (df['datecode_st'][i]<= datecode<=df['datecode_end'][i]):\n",
     "            df.drop(i,axis=0,inplace=True)\n",
     "    df.reset_index(drop=True,inplace=True)\n",
     "    return df\n",
-    "#then we use the alliances to construct a graph (with only the alliances that we know)\n",
+    "# then we use the alliances to construct a graph (with only the alliances that we know)\n",
     "def graph_constructor(dataframe,datecode):\n",
     "    df=date_filter(dataframe=dataframe,datecode=datecode)\n",
     "    edges_df = df.drop(labels=['state_name1','state_name2','defense','entente','datecode_end','datecode_st'],axis=1)\n",
-    "    #this feels stupid, but is probably the easiest way to do this\n",
+    "    # this feels stupid, but is probably the easiest way to do this\n",
     "    edges=[]\n",
-    "    for i in range(0,len(edges_df)):#we use country codes for our verticies, to save memory, \n",
-    "        #and append the start and end date of each alliance as a attributte of it\n",
+    "    for i in range(0,len(edges_df)):# we use country codes for our vertices, to save memory, \n",
+    "        # and append the start and end date of each alliance as an attribute of it\n",
     "        edge=(df['ccode1'][i],df['ccode2'][i],{'start':df['datecode_st'][i],'end':df['datecode_end'][i]})\n",
     "        edges.append(edge)\n",
     "    alliances=nx.Graph(edges)\n",
     "    return alliances\n",
     "\n",
     "G= graph_constructor(df,665325.0)\n",
-    "#we can look up names later using the function defined below\n",
+    "# we can look up names later using the function defined below\n",
     "def find_country_name(country_id, dataframe):\n",
     "    name = df.where(df['ccode1']==country_id)['state_name1'].dropna().reset_index(drop=True)[0]\n",
     "    return name\n",
@@ -328,8 +333,7 @@
     "        graph.nodes[node]['name']=name\n",
     "        labels[node]=name\n",
     "    return graph,labels\n",
-    "#G,labels=append_state_names(G,df)\n",
-    "#nx.draw_kamada_kawai(G,with_labels=True)\n",
+    "\n",
     "def draw_graph(graph,df):\n",
     "    graph,names=append_state_names(graph,df)\n",
     "    nx.draw_kamada_kawai(graph,labels=names)\n",
