--- a/code.ipynb
+++ b/code.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "43399251-4aa7-4bb0-b334-7ab08b898827",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "3ca221e1-041c-46fc-9340-ce64b385404e",
    "metadata": {},
    "outputs": [],
@@ -343,32 +343,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "619ceabb-3d7e-4ac0-bd6c-71d28425abb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#animation for time codes\n",
+    "# animation for time codes\n",
     "start=665325.0\n",
     "stop=698067.75"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "98e1e6ff-1144-4b90-88fe-a450b6e68e56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#usefull functions\n",
-    "#use the function below to map the probabilities of being in a class to the class itself, with a harsh cut-off of 0.5\n",
-    "def binarize(prob):#from hw 03\n",
+    "# useful functions\n",
+    "# use the function below to map the probabilities of being in a class to the class itself, with a harsh cut-off of 0.5\n",
+    "def binarize(prob):# from hw 03\n",
     "    if prob<0.5:\n",
     "        return 0\n",
     "    elif prob==0.5:\n",
-    "        #rand =  rng.integers(low=0,high=8)%2\n",
-    "        #rand=1 #use this to favor alliance stability\n",
-    "        rand=0 # favor instability\n",
+    "        rand=0  # favor instability\n",
     "        return rand\n",
     "    else:\n",
     "        return 1\n",
